[package]
name = "blinky-button-demo"
version = "0.1.0"
authors = ["Andres O. Vela"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "=0.6.15"
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
nrf52840-hal = { features = ["rt"], version = "0.14.0" }
embedded-hal = "0.2.5"
