[package]
name = "blinky-button-demo"
version = "0.1.0"
authors = ["Andres O. Vela"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "=0.6.15"
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
embedded-hal = "0.2.5"
embassy = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "nrf52840",
    "gpiote",
    "time-driver-rtc1"
] }

[patch.crates-io]
embassy = { git = "https://github.com/embassy-rs/embassy" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy" }
embassy-macros = { git = "https://github.com/embassy-rs/embassy" }
embassy-traits = { git = "https://github.com/embassy-rs/embassy" }
